MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Status_Approvals__c/Sales_Order_Status_Approvals__c.object-meta.xml
<CustomObject>
    <label>Sales Order Status Approvals</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Sales Order Status Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Status Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>