MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Status_Approvals__c/fields/Actual_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Actual_Owner_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>