MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Status_Approvals__c/fields/Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>Alert_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alert Message</label>
    <type>TextArea</type>
</CustomField>