MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Status_Approvals__c/fields/Approval_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rejected_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval/Rejected Date</label>
    <type>DateTime</type>
</CustomField>