MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Status_Approvals__c/fields/Approve_Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Approve_Rejected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approve / Rejected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Order_Status_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>