MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Status_Approvals__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Management</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Sales Operation</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>