MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Status_Approvals__c/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>